# jonas-data-platform

./: .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml
db/: 001_core.sql  (+13 more)
services/api/: .dockerignore  Dockerfile  pyproject.toml
services/api/scripts/: reset_demo.py  seed_data.py
services/api/src/: config.py  limiter.py  logging_config.py  main.py
services/api/src/agent/: inference.py  memory.py  pii.py  prompt.py  prompt_small.py  provider.py  router.py  service.py  tools.py
services/api/src/audit/: log.py  router.py
services/api/src/auth/: email.py  jwt.py  middleware.py  openapi.py  permissions.py  router.py
services/api/src/cache/: redis.py
services/api/src/catalogue/: context.py  models.py  router.py  service.py
services/api/src/collections/: router.py
services/api/src/dashboards/: router.py  service.py
services/api/src/db/: backend.py  connection.py  init.py  tenant_schemas.py
services/api/src/graphql/: router.py  schema.py
services/api/src/integrations/: ingest.py  models.py  router.py  service.py
services/api/src/query/: router.py
services/api/src/scheduler/: scheduler.py
services/api/src/security/: crypto.py  oauth.py  ssrf.py
services/api/src/storage/: parquet.py
services/api/src/superuser/: router.py
services/api/src/tenant/: router.py
services/api/tests/: conftest.py  test_agent_prompt_template.py  test_health.py  test_oauth.py  test_openapi_auth.py  test_smart_import.py  test_tenant_isolation.py  test_transform_schema_bootstrap.py
(+66 files in other folders)
